<?xml version="1.0"?>
<package format="3">
  <name>rknn_pool_yolo</name>
  <version>0.1.0</version>
  <description>RKNN YOLO detector node publishing vision_msgs/Detection2DArray</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <!-- Python侧非ROS依赖：opencv-python, numpy, rknnlite, 等 -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
